--- a/app/appearance/langs/es_ES.json
+++ b/app/appearance/langs/es_ES.json
@@ -66,7 +66,7 @@
   "removeCard": "Eliminar tarjeta flash",
   "updateLayout": "Actualizar diseño",
   "dndFolderTip": "Tenga en cuenta que ${x} solo inserta el hipervínculo file:// y no copia el archivo",
-  "removeCol": "¿Está seguro de que desea eliminar la columna ${x} en la base de datos?",
+  "removeCol": "¿Está seguro de que desea eliminar la columna <b>${x}</b> en la base de datos?",
   "vídeo": "Vídeo",
   "audio": "Audio",
   "updateAll": "Actualizar todo",
