--- a/app/appearance/langs/ja_JP.json
+++ b/app/appearance/langs/ja_JP.json
@@ -66,7 +66,7 @@
   "removeCard": "フラッシュカードを削除",
   "updateLayout": "レイアウトを更新",
   "dndFolderTip": "${x} は file:// 形式のハイパーリンクを挿入するだけでファイルはコピーされないので注意してください",
-  "removeCol": "データベースの ${x} 列を削除してもよろしいですか？",
+  "removeCol": "データベースの <b>${x}</b> 列を削除してもよろしいですか？",
   "video": "ビデオ",
   "audio": "音声",
   "updateAll": "すべて更新",
