--- a/app/appearance/langs/ru_RU.json
+++ b/app/appearance/langs/ru_RU.json
@@ -66,7 +66,7 @@
   "removeCard": "Удалить карточку",
   "updateLayout": "Обновить макет",
   "dndFolderTip": "Пожалуйста, обратите внимание, что ${x} только вставляет файл:// гиперссылку и не копирует файл",
-  "removeCol": "Вы уверены, что хотите удалить колонку ${x} в базе данных?",
+  "removeCol": "Вы уверены, что хотите удалить колонку <b>${x}</b> в базе данных?",
   "video": "Видео",
   "audio": "Аудио",
   "updateAll": "Обновить все",
