--- a/app/appearance/langs/de_DE.json
+++ b/app/appearance/langs/de_DE.json
@@ -66,7 +66,7 @@
   "removeCard": "Karte entfernen",
   "updateLayout": "Layout aktualisieren",
   "dndFolderTip": "Bitte beachten Sie, dass ${x} nur den file:// Hyperlink einfügt und die Datei nicht kopiert.",
-  "removeCol": "Sind Sie sicher, dass Sie die ${x} Spalte in der Datenbank löschen möchten?",
+  "removeCol": "Sind Sie sicher, dass Sie die <b>${x}</b> Spalte in der Datenbank löschen möchten?",
   "video": "Video",
   "audio": "Audio",
   "updateAll": "Alle aktualisieren",
