--- a/app/appearance/langs/he_IL.json
+++ b/app/appearance/langs/he_IL.json
@@ -66,7 +66,7 @@
   "removeCard": "הסר כרטיסון",
   "updateLayout": "עדכן עימוד",
   "dndFolderTip": "שים לב כי ${x} ניחש את ה-hyperlink file:// ואינו מעתיק את הקובץ",
-  "removeCol": "אתה בטוח שברצונך למחוק את העמודה ${x} במסד הנתונים?",
+  "removeCol": "האם אתה בטוח שברצונך למחוק את העמודה <b>${x}</b> במסד הנתונים?",
   "video": "וידאו",
   "audio": "אודיו",
   "updateAll": "עדכן הכל",
