--- a/app/appearance/langs/zh_CHT.json
+++ b/app/appearance/langs/zh_CHT.json
@@ -66,7 +66,7 @@
   "removeCard": "移除閃卡",
   "updateLayout": "更新版面配置",
   "dndFolderTip": "請注意 ${x} 僅插入 file:// 超鏈接，不複製檔案",
-  "removeCol": "確定刪除資料庫中的 ${x} 欄位？",
+  "removeCol": "確定刪除資料庫中的 <b>${x}</b> 欄位？",
   "video": "影片",
   "audio": "音訊",
   "updateAll": "全部更新",
