--- a/app/appearance/langs/zh_CN.json
+++ b/app/appearance/langs/zh_CN.json
@@ -66,7 +66,7 @@
   "removeCard": "移除闪卡",
   "updateLayout": "更新布局",
   "dndFolderTip": "请注意 ${x} 仅插入 file:// 超链接，不复制文件",
-  "removeCol": "确定删除数据库中的 ${x} 列？",
+  "removeCol": "确定删除数据库中的 <b>${x}</b> 列？",
   "video": "视频",
   "audio": "音频",
   "updateAll": "全部更新",
