--- a/app/appearance/langs/he_IL.json
+++ b/app/appearance/langs/he_IL.json
@@ -1380,7 +1380,7 @@
     "70": "מעבד [%s], אנא המתן...",
     "71": "נכשל בהכנסת קובץ נכס, אנא פתח מחדש את המסמך",
     "72": "התוכן הועתק ללוח המערכת, אנא עבור אל SiYuan להדביק",
-    "73": "מייבא, אנא המתן...",
+    "73": "מייבא נתונים...",
     "74": "הליבה לא הושלמה לחלוטין [%d%%], אנא נסה שוב מאוחר יותר",
     "75": "ניסיון גישה לקובץ נכשל",
     "76": "הווידוא על זמינות החיבור המתקן של ספק שירותי אחסון בענן לא תקין, אנא בדוק את הגדרות הרשת",
