--- a/app/appearance/langs/ja_JP.json
+++ b/app/appearance/langs/ja_JP.json
@@ -1380,7 +1380,7 @@
     "70": "[%s] を処理しています。お待ちください...",
     "71": "アセットファイルの挿入に失敗しました。ドキュメントを開きなおしてください",
     "72": "コンテンツがクリップボードにコピーされました。SiYuan に貼り付けてください",
-    "73": "インポートしています。お待ちください...",
+    "73": "データをインポート中...",
     "74": "カーネルの起動が完了していません [%d%%]。後でまた試してください",
     "75": "ファイルへのアクセスに失敗しました",
     "76": "クラウドストレージサービスプロバイダーのネットワーク接続検証の結果が異常です。ネットワーク設定を確認してください",
