--- a/app/appearance/langs/pl_PL.json
+++ b/app/appearance/langs/pl_PL.json
@@ -1380,7 +1380,7 @@
     "70": "Przetwarzanie [%s], proszę czekać...",
     "71": "Nie udało się wstawić pliku zasobu, proszę ponownie otworzyć dokument",
     "72": "Zawartość została skopiowana do systemowego schowka, proszę przejść do SiYuan, aby wkleić",
-    "73": "Importowanie, proszę czekać...",
+    "73": "Importowanie danych...",
     "74": "Jądro nie zostało w pełni uruchomione [%d%%], proszę spróbować ponownie później",
     "75": "Nie udało się uzyskać dostępu do pliku",
     "76": "Weryfikacja łączności sieciowej dostawcy usługi przechowywania w chmurze jest nieprawidłowa, proszę sprawdzić konfigurację sieci",
