--- a/app/appearance/langs/ru_RU.json
+++ b/app/appearance/langs/ru_RU.json
@@ -1380,7 +1380,7 @@
     "70": "Обработка [%s], пожалуйста, подождите...",
     "71": "Не удалось вставить файл ресурса, пожалуйста, повторно откройте документ",
     "72": "Содержимое было скопировано в буфер обмена системы, пожалуйста, перейдите в SiYuan для вставки",
-    "73": "Импорт, пожалуйста, подождите...",
+    "73": "Импорт данных...",
     "74": "Ядро еще не полностью запущено [%d%%], пожалуйста, попробуйте позже",
     "75": "Попытка доступа к файлу не удалась",
     "76": "Проверка сетевого подключения поставщика облачного хранилища аномальная, пожалуйста, проверьте сетевую конфигурацию",
