--- a/app/appearance/langs/zh_CHT.json
+++ b/app/appearance/langs/zh_CHT.json
@@ -1380,7 +1380,7 @@
     "70": "正在處理 [%s]，請稍等...",
     "71": "插入資料檔失敗，請重新打開文檔",
     "72": "內容已經複製到系統剪貼簿，請到思源中進行貼上",
-    "73": "正在導入，請稍等...",
+    "73": "導入數據中...",
     "74": "kernel尚未完全啟動 [%d%%]，請稍後再試",
     "75": "嘗試訪問資料檔失敗",
     "76": "雲端存儲服務提供商網絡連通性校驗異常，請檢查網絡配置",
