--- a/app/appearance/langs/zh_CN.json
+++ b/app/appearance/langs/zh_CN.json
@@ -1380,7 +1380,7 @@
     "70": "正在处理 [%s]，请稍等...",
     "71": "插入资源文件失败，请重新打开文档",
     "72": "内容已经复制到系统剪切板，请到思源中进行粘贴",
-    "73": "正在导入，请稍等...",
+    "73": "导入数据中...",
     "74": "内核尚未完全启动 [%d%%]，请稍后再试",
     "75": "尝试访问文件失败",
     "76": "云端存储服务提供商网络连通性校验异常，请检查网络配置",
