:art: Supports disabling Markdown `~~` syntax input https://github.com/siyuan-note/siyuan/issues/12641

--- a/app/appearance/langs/de_DE.json
+++ b/app/appearance/langs/de_DE.json
@@ -44,18 +44,20 @@
   "autoLaunchMode0": "Nicht automatisch starten",
   "autoLaunchMode1": "Automatisch nach dem Booten starten",
   "autoLaunchMode2": "Automatisch starten und die Hauptoberfläche minimieren nach dem Booten",
+  "editorMarkdownInlineStrikethrough": "Markdown Inline-Durchstreichsyntax",
+  "editorMarkdownInlineStrikethroughTip": "Nach der Aktivierung wird die Eingabe der Inline-Durchstreichsyntax <code class='fn__code'>~~foo~~</code> unterstützt",
   "editorMarkdownInlineSup": "Markdown Inline-Hochstellungssyntax",
-  "editorMarkdownInlineSupTip": "Nach der Aktivierung wird die Eingabe von <code class='fn__code'>^foo^</code> Inline-Hochstellungssyntax unterstützt.",
+  "editorMarkdownInlineSupTip": "Nach der Aktivierung wird die Eingabe der Inline-Hochstellungssyntax <code class='fn__code'>^foo^</code> unterstützt",
   "editorMarkdownInlineSub": "Markdown Inline-Tiefstellungssyntax",
-  "editorMarkdownInlineSubTip": "Nach der Aktivierung wird die Eingabe von <code class='fn__code'>~foo~</code> Inline-Tiefstellungssyntax unterstützt.",
+  "editorMarkdownInlineSubTip": "Nach der Aktivierung wird die Eingabe der Inline-Tiefstellungssyntax <code class='fn__code'>~foo~</code> unterstützt",
   "editorMarkdownInlineTag": "Markdown Inline-Tag-Syntax",
-  "editorMarkdownInlineTagTip": "Nach der Aktivierung wird die Eingabe von <code class='fn__code'>#foo#</code> Inline-Tag-Syntax unterstützt.",
+  "editorMarkdownInlineTagTip": "Nach der Aktivierung wird die Eingabe der Inline-Tag-Syntax <code class='fn__code'>#foo#</code> unterstützt",
   "editorMarkdownInlineMath": "Markdown Inline-Formelsyntax",
-  "editorMarkdownInlineMathTip": "Nach der Aktivierung wird die Eingabe von <code class='fn__code'>$foo$</code> Inline-Formelsyntax unterstützt.",
+  "editorMarkdownInlineMathTip": "Nach der Aktivierung wird die Eingabe der Inline-Formelsyntax <code class='fn__code'>$foo$</code> unterstützt",
   "editorMarkdownInlineAsterisk": "Markdown Inline-Asterisk-Syntax",
-  "editorMarkdownInlineAsteriskTip": "Nach der Aktivierung wird die Eingabe von <code class='fn__code'>*foo*</code> Kursivsatz- und <code class='fn__code'>**foo**</code> Fettschrift-Syntax unterstützt.",
+  "editorMarkdownInlineAsteriskTip": "Nach der Aktivierung wird die Eingabe der Inline-Asterisk-Syntax <code class='fn__code'>*foo*</code> und <code class='fn__code'>**foo**</code> unterstützt",
   "editorMarkdownInlineUnderscore": "Markdown Inline-Unterstreichungssyntax",
-  "editorMarkdownInlineUnderscoreTip": "Nach der Aktivierung wird die Eingabe von <code class='fn__code'>_foo_</code> Kursivsatz- und <code class='fn__code'>__foo__</code> Fettschrift-Syntax unterstützt.",
+  "editorMarkdownInlineUnderscoreTip": "Nach der Aktivierung wird die Eingabe der Inline-Unterstreichungssyntax <code class='fn__code'>_foo_</code> und <code class='fn__code'>__foo__</code> unterstützt",
   "currentNotebook": "Aktuelles Notizbuch",
   "containerBlockTip1": "Die Aktivierung von Containerblöcken führt zu doppelten Suchergebnissen.",
   "containerBlockTip2": "Die Aktivierung von Dokumentenblöcken unterstützt derzeit nur die Suche nach Dokumenttiteln.",
