--- a/app/appearance/langs/en_US.json
+++ b/app/appearance/langs/en_US.json
@@ -44,18 +44,20 @@
   "autoLaunchMode0": "Do not launch automatically",
   "autoLaunchMode1": "Auto launch after booting",
   "autoLaunchMode2": "Auto launch and minimize the main interface after booting",
+  "editorMarkdownInlineStrikethrough": "Markdown inline strikethrough syntax",
+  "editorMarkdownInlineStrikethroughTip": "After enabling, the <code class='fn__code'>~~foo~~</code> inline strikethrough syntax input will be supported",
   "editorMarkdownInlineSup": "Markdown inline superscript syntax",
-  "editorMarkdownInlineSupTip": "After enabling, <code class='fn__code'>^foo^</code> inline superscript syntax input will be supported",
+  "editorMarkdownInlineSupTip": "After enabling, the <code class='fn__code'>^foo^</code> inline superscript syntax input will be supported",
   "editorMarkdownInlineSub": "Markdown inline subscript syntax",
-  "editorMarkdownInlineSubTip": "After enabling, <code class='fn__code'>~foo~</code> inline subscript syntax input will be supported",
+  "editorMarkdownInlineSubTip": "After enabling, the <code class='fn__code'>~foo~</code> inline subscript syntax input will be supported",
   "editorMarkdownInlineTag": "Markdown inline tag syntax",
-  "editorMarkdownInlineTagTip": "After enabling, <code class='fn__code'>#foo#</code> inline tag input syntax will be supported",
+  "editorMarkdownInlineTagTip": "After enabling, the <code class='fn__code'>#foo#</code> inline tag syntax input will be supported",
   "editorMarkdownInlineMath": "Markdown inline formula syntax",
-  "editorMarkdownInlineMathTip": "After enabling, <code class='fn__code'>$foo$</code> inline formula syntax input will be supported",
+  "editorMarkdownInlineMathTip": "After enabling, the <code class='fn__code'>$foo$</code> inline formula syntax input will be supported",
   "editorMarkdownInlineAsterisk": "Markdown inline asterisk syntax",
-  "editorMarkdownInlineAsteriskTip": "After enabling, <code class='fn__code'>*foo*</code> italic syntax and <code class='fn__code'>**foo**</code> bold syntax input will be supported",
+  "editorMarkdownInlineAsteriskTip": "After enabling, the <code class='fn__code'>*foo*</code> italic syntax and the <code class='fn__code'>**foo**</code> bold syntax input will be supported",
   "editorMarkdownInlineUnderscore": "Markdown inline underline syntax",
-  "editorMarkdownInlineUnderscoreTip": "After enabling, <code class='fn__code'>_foo_</code> italic syntax and <code class='fn__code'>__foo__</code> bold syntax input will be supported",
+  "editorMarkdownInlineUnderscoreTip": "After enabling, the <code class='fn__code'>_foo_</code> italic syntax and the <code class='fn__code'>__foo__</code> bold syntax input will be supported",
   "currentNotebook": "Current Notebook",
   "containerBlockTip1": "Enabling container blocks will result in duplicate search results",
   "containerBlockTip2": "Enabling document blocks currently only supports searching for document titles",
