--- a/app/appearance/langs/es_ES.json
+++ b/app/appearance/langs/es_ES.json
@@ -44,6 +44,8 @@
   "autoLaunchMode0": "No iniciar automáticamente",
   "autoLaunchMode1": "Inicio automático después del arranque",
   "autoLaunchMode2": "Iniciar automáticamente y minimizar la interfaz principal después del arranque",
+  "editorMarkdownInlineStrikethrough": "Sintaxis de tachado en línea de Markdown",
+  "editorMarkdownInlineStrikethroughTip": "Una vez habilitado, se admitirá la entrada de sintaxis de tachado en línea <code class='fn__code'>~~foo~~</code>",
   "editorMarkdownInlineSup": "Sintaxis de superíndice en línea de Markdown",
   "editorMarkdownInlineSupTip": "Después de habilitar, se admitirá la entrada de sintaxis de superíndice en línea <code class='fn__code'>^foo^</code>",
   "editorMarkdownInlineSub": "Sintaxis del subíndice en línea de Markdown",
@@ -53,7 +55,7 @@
   "editorMarkdownInlineMath": "Sintaxis de fórmula en línea de Markdown",
   "editorMarkdownInlineMathTip": "Después de habilitar, se admitirá la entrada de sintaxis de fórmula en línea <code class='fn__code'>$foo$</code>",
   "editorMarkdownInlineAsterisk": "Sintaxis de asterisco en línea de Markdown",
-  "editorMarkdownInlineAsteriskTip": "Después de habilitar, se admitirá la entrada de sintaxis <code class='fn__code'>*foo*</code> en cursiva y <code class='fn__code'>**foo**</code> en negrita" ,
+  "editorMarkdownInlineAsteriskTip": "Después de habilitar, se admitirá la entrada de sintaxis <code class='fn__code'>*foo*</code> en cursiva y <code class='fn__code'>**foo**</code> en negrita",
   "editorMarkdownInlineUnderscore": "Sintaxis de subrayado en línea de Markdown",
   "editorMarkdownInlineUnderscoreTip": "Después de habilitar, se admitirá la sintaxis <code class='fn__code'>_foo_</code> en cursiva y <code class='fn__code'>__foo__</code> en negrita",
   "currentNotebook": "Cuaderno actual",
