--- a/app/appearance/langs/fr_FR.json
+++ b/app/appearance/langs/fr_FR.json
@@ -44,6 +44,8 @@
   "autoLaunchMode0": "Ne pas lancer automatiquement",
   "autoLaunchMode1": "Lancement automatique après le démarrage",
   "autoLaunchMode2": "Lancement automatique et minimisation de l'interface principale après le démarrage",
+  "editorMarkdownInlineStrikethrough": "Syntaxe de ligne barrée Markdown",
+  "editorMarkdownInlineStrikethroughTip": "Une fois activé, la saisie de la syntaxe de ligne barrée <code class='fn__code'>~~foo~~</code> sera prise en charge",
   "editorMarkdownInlineSup": "Syntaxe exposant Markdown en ligne",
   "editorMarkdownInlineSupTip": "Après l'activation, la saisie de la syntaxe en exposant <code class='fn__code'>^foo^</code> en ligne sera prise en charge",
   "editorMarkdownInlineSub": "Syntaxe d'indice en ligne Markdown",
@@ -53,7 +55,7 @@
   "editorMarkdownInlineMath": "Syntaxe de formule en ligne Markdown",
   "editorMarkdownInlineMathTip": "Après l'activation, la saisie de la syntaxe de formule en ligne <code class='fn__code'>$foo$</code> sera prise en charge",
   "editorMarkdownInlineAsterisk": "Syntaxe d'astérisque en ligne Markdown",
-  "editorMarkdownInlineAsteriskTip": "Après l'activation, la syntaxe <code class='fn__code'>*foo*</code> italique et la syntaxe <code class='fn__code'>**foo**</code> en gras seront prises en charge" ,
+  "editorMarkdownInlineAsteriskTip": "Après l'activation, la syntaxe <code class='fn__code'>*foo*</code> italique et la syntaxe <code class='fn__code'>**foo**</code> en gras seront prises en charge",
   "editorMarkdownInlineUnderscore": "Syntaxe de soulignement en ligne Markdown",
   "editorMarkdownInlineUnderscoreTip": "Après l'activation, la syntaxe <code class='fn__code'>_foo_</code> italique et la syntaxe <code class='fn__code'>__foo__</code> gras seront prises en charge",
   "currentNotebook": "Carnet actuel",
