--- a/app/appearance/langs/ru_RU.json
+++ b/app/appearance/langs/ru_RU.json
@@ -44,6 +44,8 @@
   "autoLaunchMode0": "Не запускать автоматически",
   "autoLaunchMode1": "Автозапуск после загрузки",
   "autoLaunchMode2": "Автозапуск и минимизация главного интерфейса после загрузки",
+  "editorMarkdownInlineStrikethrough": "Markdown синтаксис зачёркивания",
+  "editorMarkdownInlineStrikethroughTip": "После включения будет поддерживаться ввод синтаксиса зачёркивания <code class='fn__code'>~~foo~~</code>",
   "editorMarkdownInlineSup": "Markdown синтаксис для надстрочного индекса",
   "editorMarkdownInlineSupTip": "После включения будет поддерживаться ввод надстрочного индекса <code class='fn__code'>^foo^</code>",
   "editorMarkdownInlineSub": "Markdown синтаксис для подстрочного индекса",
@@ -1556,5 +1558,5 @@
     "246": "Название документа не может содержать / и было заменено на _",
     "247": "Файл [%s] больше максимального ограничения [%s] и был проигнорирован для загрузки в облако",
     "248": "Целевой заголовок находится в контейнерном блоке и не может использоваться как пункт сброса"
-	}
+  }
 }
